examples/kubernetes2/provider-aws/demoapp/paymentservice/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hipstershop-payment
  labels:
    project: hipstershop
    scope: paymentservice
